objects/Pharma_Product__c.object
<CustomObject>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Level</fullName>
                </value>
                <value>
                    <fullName>Low Level</fullName>
                </value>
                <value>
                    <fullName>Medium Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Hello enter product price</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Specification__c</fullName>
        <inlineHelpText>Hello Product Spec</inlineHelpText>
        <label>Product Specification</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <inlineHelpText>Product type give</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample</label>
        <referenceTo>Sample__c</referenceTo>
        <relationshipLabel>Pharma Products</relationshipLabel>
        <relationshipName>Pharma_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_category__c</fullName>
        <label>Sub category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small 1</fullName>
                </value>
                <value>
                    <fullName>Small 2</fullName>
                </value>
                <value>
                    <fullName>Medium 1</fullName>
                </value>
                <value>
                    <fullName>Medium 2</fullName>
                </value>
                <value>
                    <fullName>Large 1</fullName>
                </value>
                <value>
                    <fullName>Large 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pharma Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pharma Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>